--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -11,4 +11,4 @@
 </p>
 
 <%= link_to 'Edit', edit_resource_path(@resource) %> |
-<%= link_to 'Back', resources_path %>
+<%= link_to 'Back', :back %>
