--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -4,7 +4,5 @@
 <%= render 'search_form' %>
 
 <div id='resources'>
-  <%= render 'index', resources: @resources %>
+  <%= render 'index' %>
 </div>
-
-<%= link_to 'New Resource', new_resource_path %>
