--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,5 +20,5 @@
 <h1>Recommended Resources</h1>
 
 <div id='resources'>
-  <%= render 'resources/index', resources: @recommended_resources %>
+  <%= render 'resources/index', :@resources => @recommended_resources %>
 </div>
